# autoforum

./: Cargo.toml  README.md
src/: characters.rs  dice_roll.rs  english.rs  flarum.rs  language.rs  llm.rs  main.rs  portuguese.rs
