[package]
name = "autoforum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
html2md = "0.2.14"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "*", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
simple-error = "0.3.0"
structopt = "0.3.26"
tokio = { version = "*", features = ["full"] }
